--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -8,5 +8,8 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true
-  }
+  },
+  "include": [
+    "prisma.config.ts"
+  ]
 }
