--- a/server/.env.example
+++ b/server/.env.example
@@ -1,1 +1,20 @@
 
+# === DB ===
+DATABASE_URL=postgresql://<user>:<password>@<hostname>:<port>/<db_name>
+
+# === SERVER ===
+NODE_ENV=<development|production>
+PORT=<port>
+
+# === MAIL ===
+MAIL_USERNAME=<your_email>
+MAIL_PASSWORD=<your_generated_email_password>
+
+# === SECURITY ===
+JWT_SECRET_KEY=<jwt_secret_key>
+
+# === ADMIN ===
+ADMIN_FIRSTNAME=<admin_firstname>
+ADMIN_LASTNAME=<admin_lastname>
+ADMIN_EMAIL=<admin_email>
+ADMIN_PASSWORD=<admin_password>
